graphs well organized

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,18 @@
 
             </div>
         </div>
+        <div class="h-screen w-100 fondo5 flex flex-col justify-between">
+            <p class="text-sm text-center p-4 font-bold">Según el análisis,
+                hablamos muchísimo entre las 3 y 4 de la tarde, mi amor🥹
+                Solemos enviarnos más de 100 mensajes jeje Luego, el momento en
+                el que más hablamos es en la noche, amor mío.
+                Seguro para despedirnos, mi amorcito bella 🥹❤️
+            </p>
+            <div>
+                {{ graph_htmlNew | safe }}
+
+            </div>
+        </div>
         <div class="h-screen w-100 fondo6 flex flex-col justify-end">
             <p class="text-sm text-center p-4 text-white font-bold">El día que
                 más hablamos
